# RiskEval

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example.toml  gpqa_local_llama32_3b_strategy1.toml  gpqa_local_qwen35_4b_strategy1.toml  gpqa_local_qwen3_4b_strategy1.toml  gsm8k_main_gpt5mini_strategy1.toml  gsm8k_main_qwen35_4b_strategy1.toml
scripts/: test_hkbu_api.py
src/riskeval/: client.py  config.py  prompts.py  runner.py
